--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   background-color: #272727;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main {
+  flex: 1;
 }
 
 .container {
@@ -74,4 +81,16 @@ body {
   -webkit-box-shadow: 0 0 0 0.7rem rgba(39, 39, 39, 1);
   -moz-box-shadow: 0 0 0 0.7rem rgba(39, 39, 39, 1);
   box-shadow: 0 0 0 0.7rem rgba(39, 39, 39, 1);
+}
+
+.footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 2rem;
+}
+
+.copyright {
+  font-size: 1rem;
+  background-color: none;
+  color: #fff;
 }
