--- a/style.css
+++ b/style.css
@@ -33,9 +33,15 @@ body {
   transition: all 0.4s ease-in-out;
 }
 
+.logo {
+  width: 50rem;
+}
+
 .form {
   display: flex;
   justify-content: center;
+
+  margin-top: 2rem;
 
   width: 40rem;
 
