--- a/style.css
+++ b/style.css
@@ -110,6 +110,21 @@ body {
   background-color: #fff;
 
   border-radius: 4rem;
+
+  animation: slidein 0.5s forwards;
+}
+
+@keyframes slidein {
+  from {
+    max-height: 0rem;
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    max-height: 50rem;
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .divider {
