--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ body {
 
   width: 40rem;
 
-  background-color: #fff;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0);
 
   border-radius: 4rem;
 
@@ -128,7 +129,7 @@ body {
 }
 
 .divider {
-  border-top: 1px solid #272727;
+  border-top: 1px solid #fff;
 }
 
 .divider--2 {
@@ -149,6 +150,11 @@ body {
   gap: 2rem;
 
   font-size: 6rem;
+}
+
+.temperature__icon {
+  width: 9rem;
+  height: 9rem;
 }
 
 .feels-like,
