--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .container {
-  margin: 40rem auto 0;
+  margin: 40vh auto 0;
   display: flex;
   flex-direction: column;
   align-items: center;
