--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,19 @@ body {
   font-size: 2.4rem;
 }
 
+.error__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 4rem;
+}
+
+.error__message {
+  font-size: 2rem;
+  color: rgba(255, 255, 255, 0.5);
+  animation: slidein 0.5s forwards;
+}
+
 /* ////////////////////////////////////////////////// */
 /* ///////////////////// FOOTER //////////////////////*/
 /* ////////////////////////////////////////////////// */
